crates/biome_service/src/snapshots/dirty_workspace.snap
---
source: crates/biome_service/src/diagnostics.rs
expression: content
---
internalError/fs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Uncommitted changes in repository
