crates/biome_service/src/snapshots/non_utf8_path.snap
---
source: crates/biome_service/src/diagnostics.rs
expression: content
---
path.js internalError/fs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Biome does not support non-UTF8 characters in path: path.js
