crates/biome_service/src/snapshots/not_found.snap
---
source: crates/biome_service/src/diagnostics.rs
expression: content
---
not_found.js internalError/fs  INTERNAL  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The file not_found.js does not exist in the workspace.
  
  ! This diagnostic was derived from an internal Biome error. Potential bug, please report it if necessary.
