crates/biome_service/src/snapshots/source_file_not_supported.snap
---
source: crates/biome_service/src/diagnostics.rs
expression: content
---
not_supported.toml files/missingHandler ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Biome could not determine the language for the file extension toml
  


